--- a/sass/component/_botones.scss
+++ b/sass/component/_botones.scss
@@ -2,3 +2,12 @@
 /* BOTONES */
 /* **************************** */
 
+// Asignación de clase <button>
+.btnEnviar{
+    background-color: $color-rojo;
+    border: 0;
+    border-radius: 10px;
+    color: $color-blanco;
+    padding: 0 1rem;
+    cursor: pointer;
+}
